# dynamate

./: .dockerignore  .gitignore  .markdownlint.jsonc  AGENTS.md  Cargo.toml  DEVELOPING.md  Dockerfile  LICENSE  Makefile  QUERY_SYNTAX.md  README.md  clippy.toml  compose.yaml  deny.toml  dist-workspace.toml  rustfmt.toml
.argon/sessions/: 13709c28-defb-44df-8485-25192ae7783d.json  70d5e067-e295-4620-b3a4-727a167e3de1.json  9a260b11-aae3-4207-bca4-502a9309fe1a.json
.github/workflows/: changelog.yml  ci.yml  create-release.yml  docker.yml  release.yml
docker/: entrypoint.sh  seed.py
docs/: CI.md  RELEASING.md
src/: aws.rs  env.rs  lib.rs  logging.rs  main.rs  readonly.rs  util.rs
src/core/: capabilities.rs  connect.rs  datastore.rs  error.rs  json.rs  language.rs  mod.rs  query.rs  schema.rs  size.rs  value.rs
src/dynamodb/: backend.rs  completion.rs  connect.rs  convert.rs  create_table.rs  debug.rs  executor.rs  json.rs  language.rs  mod.rs  query.rs  request_builder.rs  scan.rs  size.rs  table_analyzer.rs
src/expr/: ast.rs  builtins.rs  error.rs  format.rs  key_value.rs  lexer.rs  mod.rs  parser.rs  tests.rs
src/help/: mod.rs  widget.rs
src/input/: mod.rs
src/mongo/: backend.rs  connect.rs  convert.rs  language.rs  mod.rs
src/sql/: backend.rs  connect.rs  convert.rs  dialect.rs  language.rs  mod.rs
src/subcommands/: create_table.rs  list_tables.rs  mod.rs
src/widgets/: confirm.rs  create_table.rs  error.rs  filter_input.rs  mod.rs  pull_requests.rs  schema_popup.rs  table_picker.rs  theme.rs
src/widgets/query/: completion.rs  export_popup.rs  expr_format.rs  index_picker.rs  input.rs  item_keys.rs  keys_widget.rs  mod.rs  reference_popup.rs  selection.rs  tree.rs  widget.rs
tests/: backend.rs  dynamodb.rs  mongo.rs  mysql.rs  postgres.rs  smoke.rs
