[package]
name = "dynamate"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
aws-config = "1.8.5"
aws-credential-types = { version = "1.2.5", features = ["hardcoded-credentials"] }
aws-sdk-dynamodb = { version = "1.88.0", features = ["rustls"] }
clap = { version = "4.5.45", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
octocrab = "0.44.1"
ratatui = "0.30.0-alpha.5"
rustls = "0.23.31"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"

[dev-dependencies]
assert_cmd = { version = "2.0.17", features = ["color", "color-auto"] }
predicates = "3.1.3"
testcontainers = { version = "0.25.0", default-features = false, features = ["aws-lc-rs"] }
