[package]
name = "dynamate"
version = "0.1.0"
description = "Terminal UI for DynamoDB exploration and querying"
repository = "https://github.com/fiam/dynamate"
homepage = "https://github.com/fiam/dynamate"
license = "MIT"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1.89"
arboard = "3.4.1"
aws-config = "1.8.5"
aws-credential-types = { version = "1.2.5", features = ["hardcoded-credentials"] }
aws-sdk-dynamodb = { version = "1.88.0", features = ["rustls"] }
clap = { version = "4.5.45", features = ["derive"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
humansize = "2.1.3"
lazy_static = "1.5.0"
ratatui = "0.30.0-alpha.5"
rand = "0.8.5"
rustls = "0.23.31"
serde_json = "1.0.142"
terminal-light = "1.0.1"
throbber-widgets-tui = "0.10.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
unicode-width = "0.2.0"

[dev-dependencies]
assert_cmd = { version = "2.0.17", features = ["color", "color-auto"] }
predicates = "3.1.3"
testcontainers = { version = "0.25.0", default-features = false, features = ["aws-lc-rs"] }

[package.metadata.dist]
# publish = false means dist needs an explicit opt-in
dist = true

[profile.dist]
inherits = "release"
lto = "thin"
