[package]
name = "dynamate"
version = "0.2.0"
description = "Terminal UI for DynamoDB exploration and querying"
repository = "https://github.com/fiam/dynamate"
homepage = "https://github.com/fiam/dynamate"
license = "MIT"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1.89"
arboard = "3.4.1"
base64 = "0.22.1"
aws-config = "1.8.5"
aws-credential-types = { version = "1.2.5", features = ["hardcoded-credentials"] }
aws-sdk-dynamodb = { version = "1.88.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-smithy-types = "1.3.2"
clap = { version = "4.5.45", features = ["derive"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.31"
humansize = "2.1.3"
indexmap = "2.5.0"
mongodb = "3.1.1"
lazy_static = "1.5.0"
ratatui = "0.30.1"
rand = "0.8.5"
rustls = "0.23.31"
serde_json = "1.0.142"
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "bigdecimal", "chrono", "uuid", "json"] }
terminal-light = "1.0.1"
throbber-widgets-tui = "0.10.0"
# Transitive dependency pinned: time 0.3.48 adds an impl that trips a coherence
# conflict (E0119) against blanket `From`/`Into` impls in aws-smithy-types and
# ratatui-widgets on the current toolchain. Holding it at 0.3.47 keeps the build
# (and `cargo install` without --locked) working. Revisit when upstream resolves it.
time = "=0.3.47"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
unicode-width = "0.2.0"

[dev-dependencies]
assert_cmd = { version = "2.0.17", features = ["color", "color-auto"] }
predicates = "3.1.3"
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "mysql"] }
testcontainers = { version = "0.27.1", default-features = false, features = ["aws-lc-rs"] }

[package.metadata.dist]
# publish = false means dist needs an explicit opt-in
dist = true

[profile.dist]
inherits = "release"
lto = "thin"

# Curated `clippy::pedantic`. CI runs clippy with `-D warnings`, so every lint
# below is effectively an error. The allow-list silences lints that are noise
# for a TUI/AWS codebase (pervasive layout casts, doc conventions, by-value
# ergonomics); everything else in pedantic is enforced. Prefer a localized
# `#[expect(clippy::..., reason = "...")]` over widening this list.
[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Pervasive and intentional: u16/usize conversions for terminal layout math.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"

# Stylistic / low-signal for this codebase.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
similar_names = "allow"
unused_self = "allow"
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
implicit_hasher = "allow"
match_same_arms = "allow"
unnecessary_wraps = "allow"
format_push_string = "allow"
non_std_lazy_statics = "allow"

# Catch deeply-nested logic (the original handle_event smell). Threshold lives
# in clippy.toml.
cognitive_complexity = "warn"
